sdm845-common: Resolve errors
 * As we build for risingOS we are not using lineage-sdk, resolve these errors while keeping the remaining xiaomi parts intact
 * Add risingOS launcher icon

Signed-off-by: Alvin Francis <nivlafx@gmail.com>

--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -31,9 +31,8 @@
 
     <application
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/device_settings_app_name"
-        android:persistent="true"
-        android:theme="@style/Theme.SubSettingsBase">
+        android:label="Xiaomi Parts"
+        android:persistent="true">
 
         <receiver android:name=".BootCompletedReceiver">
             <intent-filter>
